<resources>
    <string name="app_name">RickMortyReddit</string>
    <string name="details_name">Name: %s</string>
    <string name="details_status">Status: %s</string>
    <string name="details_species">Species: %s</string>
    <string name="details_gender">Gender: %s</string>
    <string name="details_origin">Origin: %s</string>
    <string name="details_location">Location: %s</string>
    <string name="no_data">No Data, do you want to try again?</string>
    <string name="btn_text_retry">Retry</string>
</resources>